fix(profile): profile pictures centered, preventing overlapping profile modals

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -287,7 +287,15 @@ ul.nav {
   background: white;
 }
 
+.profileTitle {
+  text-align: center;
+}
 
+.profileImg2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*.sideBar {width:200px; }
 /*.overlay {position: absolute; top:0; left:0; height: 100%; width: 100%; z-index: 9999;}
